// Copyright 2020 The Atlas Authors. All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package atlas;

// TypeName describes type or name of the object
message TypeName {
    oneof type_optional {
        // Type of the object
        // Object can be typed/identified either by type or by name
        int32 type = 100;
    }

    oneof name_optional {
        // Name of the object
        // Object can be typed/identified either by type or by name
        string name = 200;
    }
}
